--- a/NueCCsel/NueCCsel.tex
+++ b/NueCCsel/NueCCsel.tex
@@ -210,10 +210,19 @@ The response of the event classification is given in the left panel \cref{fig:pr
     \label{fig:pre_event_score}
 \end{figure}
 
+
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{NueCCsel/Images/run1/efficiency_cat_2.pdf}
-    \caption{Efficiency of the different stages in the selection in function of the true neutrino energy. The different panels correspond to different final states of interest.}
+    \includegraphics[width=0.5\textwidth]{NueCCsel/Images/run1/efficiency_all.pdf}
+    \caption{Efficiency of the different stages in the selection in function of the true neutrino energy.}
     \label{fig:nueccinc_eff}
 \end{figure}
+
+
+%\begin{figure}
+%    \centering
+%    \includegraphics[width=\textwidth]{NueCCsel/Images/run1/efficiency_cat_2.pdf}
+%    \caption{Efficiency of the different stages in the selection in function of the true neutrino energy. The different panels %correspond to different final states of interest.}
+%    \label{fig:nueccinc_eff}
+%\end{figure}
 
